server/public/css/style.css
/* -*- Mode: CSS; tab-width: 4; indent-tabs-mode: nil; -*- */
/* vim:set ft=css ts=4 sw=4 sts=4 autoindent: */

/* style for home page and manual. */

/* @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,400italic,600italic,700italic&subset=latin&effect=smoothing); */
/*@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,400italic,600italic,700italic&subset=latin&effect=smoothing);*/

/* override sentence number text style from brat style-vis.css */
.sentnum text {
  display: none;
}

/* override sentence number separator line style from brat style-vis.css */
.sentnum path {
  display: none;
}

img.bordered {
  border: 1px solid black;
}

#oldbrowser {
  color: red;
}

#partialsupport {
  font-weight: bold;
}

a img {
  border: 0;
}
a.fronta:visited {
  color: #2200cc;
}
.smallgray {
  font-size: 80%;
  color:gray;
}
.smallgray a {
  color:gray;
}
.smallgray a:visited {
  color:#aaaaaa;
}

span.tt {
  font-family: 'Bitstream Vera Sans Mono','Courier',monospace;
}

.hp-unselectable {
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
   user-select: none;
   cursor: default;
}

/*#help {
  position: relative;
  left: 100px;
}*/

#cy {
  width: 100%;
  height: 100%;
  position: absolute;
}

#save {
  display: none;
}

.hidden-input {
  position: absolute;
  display: none;
  opacity: 0.99;
}

.hidden-input.activated {
  display: inline;
  border: 2px solid black;
  color: black;
}

#mute {
  display: none;
}

#mute.activated {
  position: absolute;
  width: 1500px;
  height: 400px;
  display: block;
  background-color: rgba(0,0,0,0.25);;
  z-index: 800;
}

#notebox {
  width:50%;
  margin:auto;
  text-align:center;
  background-color: #ffcccc;
  padding: 10px;
  margin: 20px;
}

.redacted {
/*  background-color: #ffcccc; */
  background-color: #cccccc;
}

img {
  -moz-box-shadow: 5px 5px 5px #999999;
  -webkit-box-shadow: 5px 5px 5px #999999;
  box-shadow: 5px 5px 5px #999999;
  margin-bottom: 0.5em;
}

img.right {
  border: 1px solid black;
  margin:auto;
  float:right;
  margin-left: 5em;
  margin-bottom: 3em;
  margin-top: 1em;
}

img.tinymargin {
  margin: 0.3em;
}

img.icon {
  vertical-align:bottom;
  -moz-box-shadow: 0px 0px 0px #ffffff;
  -webkit-box-shadow: 0px 0px 0px #ffffff;
  box-shadow: 0px 0px 0px #ffffff;
  margin-bottom: 0;
}

body {
/*   font-family: 'Open Sans', arial, sans-serif; */
/*  font-family: 'Open Sans', Arial, freesans, sans-serif; */
  font-family: 'Source Sans Pro', Arial, freesans, sans-serif;
  font-size: 14px;
  overflow-y: scroll;
}

h2 {
  margin-top: 2em;
}

h2.nomargin {
  margin-top: 0em;
}

h3 {
  margin-top: 1.5em;
}

.infolabel {
  font-weight: bold;
  display: inline-block;
  width: 10em;
}

.h1subtitle {
  font-size: 15px;
  color: gray;
}

div.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#hp-header {
  padding-top: 5px;
  margin-bottom: 5px;
  padding-left: 2em;
}
#menulogo {
  padding-top: 0.5em;
  padding-right: 1em;
  float: right;
}
#hp-header span a {
  text-decoration: none; /* no underline in menu */
}
#hp-header > span, #hp-header > a {
  margin-right: 20px;
}

.bigbutton {
  font-size: 20px !important;
  padding: 10px 15px !important;
}

#hp-header > .hp-logo {
  font-size: 1.2em;
  margin-top: -10px;
  margin-bottom: -10px;
  text-shadow: #000 0 0 3px;
}

#main {
  max-width:1000px;
  min-width: 600px;
  padding-left: 2em;
  padding-right: 2em;
}
#content {
  margin: 15px;
}

#manual-main {
  max-width:960px;
  padding-left: 2em;
  padding-right: 2em;
  padding-bottom: 5em;
}

#footer {
  font-size: 9px;
  color: #999;
  border-top: 1px solid lightgray;
  margin-top: 10em;
  margin-bottom: 5em;
  clear: both;
}

.footer-text {
  float: right;
}

.footer-logo {
  float: right;
}

.footer-logo img {
  margin: 0;
  -moz-box-shadow: 0px 0px 0px #fff;
  -webkit-box-shadow: 0px 0px 0px #fff;
  box-shadow: 0px 0px 0px #fff;
}

#titleblock {
  height: 100px;
}

#downloadblock {
  float: right;
  width: 300px;
  margin: 1em;
}

.image {
  margin-left: 2em;
}

.image .caption {
  font-size: 85%;
  font-family: sans-serif;
  text-align: center;
}

#browsersupport {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.annotation_wrapper {
  margin-left: 2em;
  border: 1px solid;
  border-color: rgb(136, 136, 136);
  background-color: rgb(207, 226, 243);
}

.annotation_wrapper td {
  padding: 1em;
}

.annotation_table {
  border: none;
}

.annotation_table th {
  padding: 0em;
  font-family: monospace;
  font-size: 13px;
}

.annotation_table td {
  padding: 0;
  font-family: monospace;
  font-size: 13px;
}

td.complete {
  background-color: lightgreen;
}

td.partial {
  background-color: #F0F0B0;
}

td.none {
  /* background-color: #FF9090;*/
  background-color: white;
}

.rounded {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
}

/* "starburst" CSS adapted from
   http://matthewjamestaylor.com/blog/css3-starbursts */
.starburst {
  z-index:1000;
  position: relative;
  top: 0px;
  left: 600px;
  margin-left:-2.5em;
  margin-top: -0.5em;
  background: none;
  text-align: center;
  text-decoration: none;
  -webkit-transform:rotate(-90deg);
  -moz-transform:rotate(-90deg);
  rotation: -90deg;
}
.starburst span {
  display: block;
  -webkit-transform:rotate(22.5deg);
  -moz-transform:rotate(22.5deg);
  rotation: 22.5deg;
}
.starburst,
.starburst span {
  width: 5em;
  height: 5em;
  display: block;
  /* border-radius: 3em; */
  font-size: 13px;
  -webkit-transition: 0.3s ease;
  -moz-transition: 0.3s ease;
  transition: 0.3s ease;
}
.starburst span.star,
.starburst span.sshadow {
  position: absolute;
}
.starburst span.star {
  color: white;
  font-weight: bold;
  background: #6da6d1;
}
.starburst span.sshadow {
  -moz-box-shadow: 0px 0px 0px 2px #fff;
  -webkit-box-shadow: 0px 0px 0px 2px #fff;
  box-shadow: 0px 0px 0px 2px #fff;
}
/* ... */

